--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       timeout: 1s
       retries: 5
     container_name: php_test_mysql
-    #ports:
-      #- "3306:3306"
+    ports:
+      - "3306:3306"
     volumes:
      - db:/var/lib/mysql
     environment:
